--- a/package.json
+++ b/package.json
@@ -1,12 +1,21 @@
 {
   "name": "gatsby-crudzoo",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "theme for gatsby",
+  "main": "index.ts",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Hidekazoo/gatsby-crudzoo"
+  },
+  "author": "hidekazoo",
+  "scripts": {
+    "build": "gatsby build"
+  },
   "devDependencies": {
     "@hot-loader/react-dom": "^16.8.6",
     "@types/react-helmet": "^5.0.8",
-    "gatsby": "^2.0.117",
+    "gatsby": "2.7.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   },
@@ -16,13 +25,21 @@
     "@mdx-js/tag": "^0.20.3",
     "@types/react": "^16.8.17",
     "@types/react-dom": "^16.8.4",
-    "gatsby": "2.5.5",
+    "gatsby": "2.7.0",
+    "gatsby-image": "^2.1.0",
     "gatsby-mdx": "^0.6.3",
+    "gatsby-plugin-compile-es6-packages": "^1.1.0",
     "gatsby-plugin-dark-mode": "^1.1.0",
     "gatsby-plugin-page-creator": "^2.0.12",
     "gatsby-plugin-react-helmet": "^3.0.12",
+    "gatsby-plugin-sharp": "^2.0.37",
     "gatsby-plugin-typescript": "^2.0.13",
+    "gatsby-remark-prismjs": "^3.2.9",
     "gatsby-source-filesystem": "^2.0.33",
-    "react-helmet": "^5.2.1"
+    "gatsby-transformer-remark": "^2.3.12",
+    "gatsby-transformer-sharp": "^2.1.19",
+    "prismjs": "^1.16.0",
+    "react-helmet": "^5.2.1",
+    "sharp": "^0.22.1"
   }
 }
