--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "devDependencies": {
     "@hot-loader/react-dom": "^16.8.6",
     "@types/react-helmet": "^5.0.8",
-    "gatsby": "2.7.0",
+    "gatsby": "2.3.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   },
@@ -25,7 +25,7 @@
     "@mdx-js/tag": "^0.20.3",
     "@types/react": "^16.8.17",
     "@types/react-dom": "^16.8.4",
-    "gatsby": "2.7.0",
+    "gatsby": "^2.7.1",
     "gatsby-image": "^2.1.0",
     "gatsby-mdx": "^0.6.3",
     "gatsby-plugin-compile-es6-packages": "^1.1.0",
@@ -34,8 +34,9 @@
     "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-sharp": "^2.0.37",
     "gatsby-plugin-typescript": "^2.0.13",
+    "gatsby-remark-images": "^3.0.12",
     "gatsby-remark-prismjs": "^3.2.9",
-    "gatsby-source-filesystem": "^2.0.33",
+    "gatsby-source-filesystem": "^2.0.37",
     "gatsby-transformer-remark": "^2.3.12",
     "gatsby-transformer-sharp": "^2.1.19",
     "prismjs": "^1.16.0",
