--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@mdx-js/tag": "^0.20.3",
     "@types/react": "^16.8.17",
     "@types/react-dom": "^16.8.4",
+    "@types/styled-components": "^4.1.16",
     "gatsby": "^2.7.1",
     "gatsby-image": "^2.1.0",
     "gatsby-mdx": "^0.6.3",
@@ -48,6 +49,7 @@
     "gatsby-transformer-sharp": "^2.1.19",
     "prismjs": "^1.16.0",
     "react-helmet": "^5.2.1",
-    "sharp": "^0.22.1"
+    "sharp": "^0.22.1",
+    "styled-components": "^4.3.1"
   }
 }
