--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "gatsby-plugin-page-creator": "^2.0.12",
     "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-sharp": "^2.0.37",
+    "gatsby-plugin-styled-components": "^3.1.0",
     "gatsby-plugin-typescript": "^2.0.13",
     "gatsby-remark-images": "^3.0.12",
     "gatsby-remark-prismjs": "^3.2.9",
