--- a/package.json
+++ b/package.json
@@ -20,12 +20,6 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   },
-  "devDependencies": {
-    "@types/react-helmet": "^5.0.8",
-    "gatsby": "^2.13.8",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6"
-  },
   "dependencies": {
     "@mdx-js/mdx": "^1.0.18",
     "@mdx-js/react": "^1.0.16",
@@ -33,6 +27,7 @@
     "@types/react": "^16.8.17",
     "@types/react-dom": "^16.8.4",
     "@types/styled-components": "^4.1.16",
+    "@types/react-helmet": "^5.0.8",
     "gatsby": "^2.13.8",
     "gatsby-image": "^2.1.0",
     "gatsby-mdx": "^0.6.3",
@@ -49,6 +44,8 @@
     "gatsby-transformer-remark": "^2.3.12",
     "gatsby-transformer-sharp": "^2.1.19",
     "prismjs": "^1.16.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
     "sharp": "^0.22.1",
     "styled-components": "^4.3.1"
