--- a/package.json
+++ b/package.json
@@ -21,23 +21,23 @@
     "react-dom": "^16.8.6"
   },
   "dependencies": {
-    "@mdx-js/mdx": "^1.0.18",
+    "@mdx-js/mdx": "^1.0.27",
     "@mdx-js/react": "^1.0.16",
     "@mdx-js/tag": "^0.20.3",
     "@types/react": "^16.8.17",
     "@types/react-dom": "^16.8.4",
-    "@types/styled-components": "^4.1.16",
     "@types/react-helmet": "^5.0.8",
+    "@types/styled-components": "^4.1.16",
     "gatsby": "^2.13.8",
     "gatsby-image": "^2.1.0",
-    "gatsby-mdx": "^0.6.3",
     "gatsby-plugin-compile-es6-packages": "^1.1.0",
     "gatsby-plugin-dark-mode": "^1.1.0",
+    "gatsby-plugin-mdx": "^1.0.13",
     "gatsby-plugin-page-creator": "^2.0.12",
     "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-sharp": "^2.0.37",
-    "gatsby-plugin-styled-components": "^3.1.0",
-    "gatsby-plugin-typescript": "^2.0.13",
+    "gatsby-plugin-styled-components": "^3.1.2",
+    "gatsby-plugin-typescript": "^2.1.2",
     "gatsby-remark-images": "^3.0.12",
     "gatsby-remark-prismjs": "^3.2.9",
     "gatsby-source-filesystem": "^2.0.37",
