--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   },
   "author": "hidekazoo",
   "keywords": [
-    "gatsby"
+    "gatsby",
+    "gatsby-theme",
+    "gatsby-plugin"
   ],
   "scripts": {
-    "build": "gatsby build"
+    "build": "gatsby build",
+    "format": "prettier --write src/**/*.{ts,tsx}"
   },
   "peerDependencies": {
     "gatsby": "^2.13.8",
@@ -41,6 +44,7 @@
     "gatsby-remark-images": "^3.0.12",
     "gatsby-remark-prismjs": "^3.2.9",
     "gatsby-source-filesystem": "^2.0.37",
+    "gatsby-transformer-json": "^2.2.2",
     "gatsby-transformer-remark": "^2.3.12",
     "gatsby-transformer-sharp": "^2.1.19",
     "prismjs": "^1.16.0",
@@ -49,5 +53,11 @@
     "react-helmet": "^5.2.1",
     "sharp": "^0.22.1",
     "styled-components": "^4.3.1"
+  },
+  "devDependencies": {
+    "eslint": "^5.16.0",
+    "eslint-config-react-app": "^4.0.1",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "prettier": "^1.18.2"
   }
 }
