--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,8 +19,7 @@
     "noFallthroughCasesInSwitch": true,
     "allowSyntheticDefaultImports": false,
     "skipLibCheck": true,
-    "baseUrl": ".",
-    // "declaration": true
+    "baseUrl": "."
   },
   "include": ["./src/**/*"]
 }
