--- a/package.json
+++ b/package.json
@@ -16,30 +16,31 @@
   ],
   "scripts": {
     "build": "gatsby build",
-    "format": "prettier --write src/**/*.{ts,tsx}"
+    "format": "prettier --write src/**/*.{ts,tsx,js,jsx,css}"
   },
   "peerDependencies": {
-    "gatsby": "^2.13.8",
+    "gatsby": "^2.13.61",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   },
   "dependencies": {
+    "@emotion/core": "^10.0.15",
+    "@emotion/styled": "^10.0.15",
     "@mdx-js/mdx": "^1.0.27",
     "@mdx-js/react": "^1.0.16",
     "@mdx-js/tag": "^0.20.3",
     "@types/react": "^16.8.17",
     "@types/react-dom": "^16.8.4",
     "@types/react-helmet": "^5.0.8",
-    "@types/styled-components": "^4.1.16",
-    "gatsby": "^2.13.8",
+    "gatsby": "2.13.61",
     "gatsby-image": "^2.1.0",
     "gatsby-plugin-compile-es6-packages": "^1.1.0",
     "gatsby-plugin-dark-mode": "^1.1.0",
+    "gatsby-plugin-emotion": "^4.1.2",
     "gatsby-plugin-mdx": "^1.0.13",
     "gatsby-plugin-page-creator": "^2.0.12",
     "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-sharp": "^2.0.37",
-    "gatsby-plugin-styled-components": "^3.1.2",
     "gatsby-plugin-typescript": "^2.1.2",
     "gatsby-remark-images": "^3.0.12",
     "gatsby-remark-prismjs": "^3.2.9",
@@ -51,13 +52,19 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
-    "sharp": "^0.22.1",
-    "styled-components": "^4.3.1"
+    "sharp": "^0.22.1"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
     "eslint-config-react-app": "^4.0.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
+    "husky": ">=1",
+    "lint-staged": ">=8",
     "prettier": "^1.18.2"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   }
 }
