comment out darkmode style

--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@types/react": "^16.8.17",
     "@types/react-dom": "^16.8.4",
     "@types/react-helmet": "^5.0.8",
-    "gatsby": "2.13.61",
+    "gatsby": "^2.16.5",
     "gatsby-image": "^2.1.0",
     "gatsby-plugin-compile-es6-packages": "^1.1.0",
     "gatsby-plugin-dark-mode": "^1.1.0",
