--- a/package.json
+++ b/package.json
@@ -32,9 +32,13 @@
     "@types/react": "^16.8.17",
     "@types/react-dom": "^16.8.4",
     "@types/react-helmet": "^5.0.8",
+    "@types/react-instantsearch-dom": "^6.3.0",
     "@types/theme-ui": "^0.2.3",
+    "algoliasearch": "^4.2.0",
+    "dotenv": "^8.2.0",
     "gatsby": "^2.16.5",
     "gatsby-image": "^2.1.0",
+    "gatsby-plugin-algolia": "^0.10.0",
     "gatsby-plugin-compile-es6-packages": "^1.1.0",
     "gatsby-plugin-dark-mode": "^1.1.0",
     "gatsby-plugin-emotion": "^4.1.2",
@@ -54,6 +58,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
+    "react-instantsearch-dom": "^6.4.0",
     "sharp": "^0.24.1",
     "theme-ui": "^0.2.44"
   },
