--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "gatsby-plugin-emotion": "^4.1.2",
     "gatsby-plugin-mdx": "^1.0.13",
     "gatsby-plugin-page-creator": "^2.0.12",
+    "gatsby-plugin-postcss": "^2.3.1",
     "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-sharp": "^2.0.37",
     "gatsby-plugin-theme-ui": "^0.2.43",
@@ -66,9 +67,11 @@
     "eslint": "^5.16.0",
     "eslint-config-react-app": "^4.0.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.19.0",
     "husky": ">=1",
     "lint-staged": ">=8",
-    "prettier": "^1.18.2"
+    "prettier": "^1.18.2",
+    "tailwindcss": "^1.4.6"
   },
   "husky": {
     "hooks": {
