--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-helmet": "^5.2.1",
     "react-instantsearch-dom": "^6.4.0",
     "sharp": "^0.24.1",
+    "tailwindcss": "^1.4.6",
     "theme-ui": "^0.2.44"
   },
   "devDependencies": {
@@ -70,8 +71,7 @@
     "eslint-plugin-react": "^7.19.0",
     "husky": ">=1",
     "lint-staged": ">=8",
-    "prettier": "^1.18.2",
-    "tailwindcss": "^1.4.6"
+    "prettier": "^1.18.2"
   },
   "husky": {
     "hooks": {
