--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "algoliasearch": "^4.2.0",
     "dotenv": "^8.2.0",
     "gatsby": "^2.16.5",
+    "gatsby-awesome-pagination": "^0.3.6",
     "gatsby-image": "^2.1.0",
     "gatsby-plugin-algolia": "^0.10.0",
     "gatsby-plugin-compile-es6-packages": "^1.1.0",
