--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "@types/react-dom": "^16.8.4",
     "@types/react-helmet": "^5.0.8",
     "@types/react-instantsearch-dom": "^6.3.0",
-    "@types/theme-ui": "^0.2.3",
     "algoliasearch": "^4.2.0",
     "dotenv": "^8.2.0",
     "gatsby": "^2.16.5",
@@ -48,7 +47,6 @@
     "gatsby-plugin-postcss": "^2.3.1",
     "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-sharp": "^2.0.37",
-    "gatsby-plugin-theme-ui": "^0.2.43",
     "gatsby-plugin-typescript": "^2.1.2",
     "gatsby-remark-images": "^3.0.12",
     "gatsby-remark-prismjs": "^3.2.9",
@@ -62,8 +60,7 @@
     "react-helmet": "^5.2.1",
     "react-instantsearch-dom": "^6.4.0",
     "sharp": "^0.24.1",
-    "tailwindcss": "^1.4.6",
-    "theme-ui": "^0.2.44"
+    "tailwindcss": "^1.4.6"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
