--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "gatsby-plugin-mdx": "^1.0.13",
     "gatsby-plugin-page-creator": "^2.0.12",
     "gatsby-plugin-postcss": "^2.3.1",
+    "gatsby-plugin-purgecss": "^5.0.0",
     "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-sharp": "^2.0.37",
     "gatsby-plugin-typescript": "^2.1.2",
