--- a/package.json
+++ b/package.json
@@ -64,6 +64,9 @@
     "tailwindcss": "^1.4.6"
   },
   "devDependencies": {
+    "@babel/compat-data": "^7.11.0",
+    "@babel/core": "^7.11.6",
+    "@babel/preset-env": "^7.11.5",
     "eslint": "^5.16.0",
     "eslint-config-react-app": "^4.0.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
