--- a/package.json
+++ b/package.json
@@ -19,15 +19,15 @@
     "format": "prettier --write src/**/*.{ts,tsx,js,jsx,css}"
   },
   "peerDependencies": {
-    "gatsby": "^2.13.61",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "gatsby": "2.24.4",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   },
   "dependencies": {
     "@emotion/core": "^10.0.15",
     "@emotion/styled": "^10.0.15",
-    "@mdx-js/mdx": "^1.0.27",
-    "@mdx-js/react": "^1.0.16",
+    "@mdx-js/mdx": "^1.6.18",
+    "@mdx-js/react": "^1.6.18",
     "@mdx-js/tag": "^0.20.3",
     "@types/react": "^16.8.17",
     "@types/react-dom": "^16.8.4",
@@ -35,14 +35,14 @@
     "@types/react-instantsearch-dom": "^6.3.0",
     "algoliasearch": "^4.2.0",
     "dotenv": "^8.2.0",
-    "gatsby": "^2.16.5",
+    "gatsby": "2.24.4",
     "gatsby-awesome-pagination": "^0.3.6",
     "gatsby-image": "^2.1.0",
     "gatsby-plugin-algolia": "^0.10.0",
     "gatsby-plugin-compile-es6-packages": "^1.1.0",
     "gatsby-plugin-dark-mode": "^1.1.0",
     "gatsby-plugin-emotion": "^4.1.2",
-    "gatsby-plugin-mdx": "^1.0.13",
+    "gatsby-plugin-mdx": "^1.2.41",
     "gatsby-plugin-page-creator": "^2.0.12",
     "gatsby-plugin-postcss": "^2.3.1",
     "gatsby-plugin-purgecss": "^5.0.0",
@@ -56,17 +56,14 @@
     "gatsby-transformer-remark": "^2.3.12",
     "gatsby-transformer-sharp": "^2.1.19",
     "prismjs": "^1.16.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-helmet": "^5.2.1",
     "react-instantsearch-dom": "^6.4.0",
     "sharp": "^0.24.1",
     "tailwindcss": "^1.4.6"
   },
   "devDependencies": {
-    "@babel/compat-data": "^7.11.0",
-    "@babel/core": "^7.11.6",
-    "@babel/preset-env": "^7.11.5",
     "eslint": "^5.16.0",
     "eslint-config-react-app": "^4.0.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
