--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "@types/react-instantsearch-dom": "^6.3.0",
     "algoliasearch": "^4.2.0",
     "dotenv": "^8.2.0",
-    "gatsby": "2.24.4",
+    "gatsby": "^2.29.2",
     "gatsby-awesome-pagination": "^0.3.6",
     "gatsby-image": "^2.1.0",
     "gatsby-plugin-algolia": "^0.10.0",
