--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/react-helmet": "^5.0.8",
     "@types/react-instantsearch-dom": "^6.3.0",
     "algoliasearch": "^4.2.0",
+    "dayjs": "^1.9.8",
     "dotenv": "^8.2.0",
     "gatsby": "^2.29.2",
     "gatsby-awesome-pagination": "^0.3.6",
