--- a/package.json
+++ b/package.json
@@ -52,16 +52,18 @@
     "gatsby-transformer-json": "^2.2.2",
     "gatsby-transformer-remark": "^2.3.12",
     "gatsby-transformer-sharp": "^2.1.19",
+    "lodash": "^4.17.20",
     "prismjs": "^1.16.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^5.2.1",
     "react-instantsearch-dom": "^6.4.0",
     "sharp": "^0.24.1",
-    "tailwindcss": "^1.4.6"
+    "tailwindcss": "^1.4.6",
+    "typescript": "^4.1.3"
   },
   "devDependencies": {
-    "eslint": "^5.16.0",
+    "eslint": "^7.19.0",
     "eslint-config-react-app": "^4.0.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.19.0",
