--- a/package.json
+++ b/package.json
@@ -61,6 +61,8 @@
     "tailwindcss": "^1.4.6"
   },
   "devDependencies": {
+    "@types/algoliasearch": "^3.34.11",
+    "@types/react-instantsearch-dom": "^6.8.0",
     "eslint": "^5.16.0",
     "eslint-config-react-app": "^4.0.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
