--- a/.eslintrc
+++ b/.eslintrc
@@ -1,13 +1,17 @@
 {
+  "parser": "@typescript-eslint/parser",
+  "plugins": ["@typescript-eslint", "react-hooks"],
   "extends": [
-    "react-app",
-    "plugin:react/recommended",
-    "plugin:jsx-a11y/recommended"
+    "plugin:@typescript-eslint/eslint-recommended",
+    "plugin:@typescript-eslint/recommended"
   ],
-  "plugins": ["react", "jsx-a11y"],
   "rules": {
-    "react/jsx-uses-react": 1,
-    "react/jsx-uses-vars": 1,
-    "react/prop-types": 0
+    "react/jsx-uses-react": 0,
+    "react/prop-types": 0,
+    "@typescript-eslint/no-var-requires": 1
+  },
+  "env": {
+    "browser": true,
+    "commonjs": true
   }
 }
