--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   ],
   "scripts": {
     "build": "gatsby build",
-    "format": "prettier --write src/**/*.{ts,tsx,js,jsx,css}"
+    "format": "prettier --write src/**/*.{ts,tsx,js,jsx,css}",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "peerDependencies": {
     "gatsby": "^2.29.2",
@@ -27,11 +29,12 @@
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "@mdx-js/tag": "^0.20.3",
+    "@types/classnames": "^2.2.11",
     "@types/react": "^16.8.17",
     "@types/react-dom": "^16.8.4",
     "@types/react-helmet": "^5.0.8",
-    "@types/react-instantsearch-dom": "^6.3.0",
     "algoliasearch": "^4.2.0",
+    "classnames": "^2.2.6",
     "dayjs": "^1.9.8",
     "dotenv": "^8.2.0",
     "gatsby": "^2.29.2",
@@ -58,22 +61,39 @@
     "react-helmet": "^5.2.1",
     "react-instantsearch-dom": "^6.4.0",
     "sharp": "^0.24.1",
-    "tailwindcss": "^1.4.6"
+    "tailwindcss": "^1.4.6",
+    "typescript": "^4.2.2"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^11.2.5",
+    "@testing-library/user-event": "^12.7.3",
     "@types/algoliasearch": "^3.34.11",
+    "@types/jest": "^26.0.20",
     "@types/react-instantsearch-dom": "^6.8.0",
-    "eslint": "^5.16.0",
+    "@types/react-test-renderer": "^17.0.1",
+    "@typescript-eslint/eslint-plugin": "^4.15.2",
+    "@typescript-eslint/parser": "^4.15.2",
+    "babel-jest": "^26.6.3",
+    "babel-preset-gatsby": "^0.12.2",
+    "eslint": "^7.20.0",
     "eslint-config-react-app": "^4.0.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.19.0",
-    "husky": ">=1",
-    "lint-staged": ">=8",
-    "prettier": "^1.18.2"
+    "husky": "^4.3.8",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^26.6.3",
+    "lint-staged": "^10.5.4",
+    "prettier": "^1.18.2",
+    "react-test-renderer": "^17.0.1"
   },
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged"
     }
+  },
+  "lint-staged": {
+    "src/*.{js,ts,tsx}": "eslint --fix",
+    "src/*.{js,ts,tsx,css}": "prettier --write"
   }
 }
