fix home screen ui

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,6 @@
     "skipLibCheck": true,
     "baseUrl": "."
   },
-  "include": ["./src/**/*"],
+  "include": ["./src/**/*", "./jest-setup.ts"],
   "exclude": ["./dist"]
 }
