--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
+    "@testing-library/react-hooks": "^5.1.0",
     "@testing-library/user-event": "^12.7.3",
     "@types/algoliasearch": "^3.34.11",
     "@types/jest": "^26.0.20",
