--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "build": "gatsby build",
     "format": "prettier --write src/**/*.{ts,tsx,js,jsx,css}",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@mdx-js/mdx": "^1.6.22",
@@ -76,6 +77,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.23.2",
     "gatsby-plugin-postcss": "^4.3.0",
+    "husky": "^6.0.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
     "lint-staged": "^10.5.4",
@@ -87,6 +89,8 @@
   },
   "lint-staged": {
     "src/*.{js,ts,tsx}": "eslint --fix",
-    "src/*.{js,ts,tsx,css}": "prettier --write"
+    "src/*.{js,ts,tsx,css}": "prettier --write",
+    "*.js": "eslint --cache --fix",
+    "*.{ts,tsx,js,jsx,css}": "prettier --write"
   }
 }
