fix css warning

--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/react-hooks": "^5.1.2",
     "@testing-library/user-event": "^13.1.5",
+    "@trivago/prettier-plugin-sort-imports": "^2.0.2",
     "@types/algoliasearch": "^4.0.0",
     "@types/jest": "^26.0.22",
     "@types/react-instantsearch-dom": "^6.10.0",
@@ -87,9 +88,7 @@
     "react-test-renderer": "^17.0.2"
   },
   "lint-staged": {
-    "src/*.{js,ts,tsx}": "eslint --fix",
-    "src/*.{js,ts,tsx,css}": "prettier --write",
-    "*.js": "eslint --cache --fix",
-    "*.{ts,tsx,js,jsx,css}": "prettier --write"
+    "src/*.{js,jsx,ts,tsx}": "eslint --fix",
+    "src/*.{js,jsx,ts,tsx,css}": "prettier --write"
   }
 }
